# MRQM

./: CMakeLists.txt  CMakePresets.json  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  setup.py  sonar-project.properties
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: sonarcloud.yml
app/: CMakeLists.txt  MRQM_app.cpp
doc/: CMakeLists.txt  conf.py  index.rst
include/MRQM/: MRQM.hpp
python/: CMakeLists.txt  MRQM_python.cpp
python/tests/: test_python_bindings.py
src/: CMakeLists.txt  MRQM.cpp
tests/: CMakeLists.txt  MRQM_t.cpp  TestConfiguration.cpp
